# DutchVocabBot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-run.sh  dutch_vocab.db  pyproject.toml
src/: bot.py  exercises.py  main.py  ml_models.py  spaced_repetition.py  vocabulary_loader.py
src/data/: models.py  repositories.py
src/ml/: contextual_bandits.py  features.py  progress_predictor.py
