[project]
name = "dutch-vocab-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic==1.13.1",
    "asyncio==3.4.3",
    "asyncpg==0.29.0",
    "numpy>=1.26.4",
    "pandas==2.1.4",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "python-telegram-bot==20.7",
    "scikit-learn==1.3.2",
    "sqlalchemy==2.0.23",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]
